--- a/efpodsanalyzer/EFPAConfig.json
+++ b/efpodsanalyzer/EFPAConfig.json
@@ -1,6 +1,6 @@
 {
     "config": {
-        "categories": ["以 M 开头的库", "以 Kit 结尾的库", "其它"],
+        "categories": ["M-prefixed Libraries", "Library ending with Kit", "Other"],
         "categoryRegexes": ["^M.*", ".*(Kit)$", ".*"]
     }
 }
